adds solutions background

--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
     <main>
       <!-- Секция 1 -->
       <section class="solutions">
-        <div class="container">
-          <h1 class="solutions title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="button">Замовити послугу</button>
+        <div class="page-solutions">
+          <div class="container">
+            <h1 class="solutions title">
+              Ефективні рішення для вашого бізнесу
+            </h1>
+            <button type="button" class="button">Замовити послугу</button>
+          </div>
         </div>
       </section>
 
