--- a/index.html
+++ b/index.html
@@ -39,12 +39,23 @@
 
         <ul class="auth-nav list">
           <li class="auth-nav item">
-            <a href="malito:info@devstudio.com" class="link"
-              >info@devstudio.com
+            <a href="malito:info@devstudio.com" class="link" aria-label="mail">
+              <svg class="icon-contacts" width="16" height="12">
+                <use href="./images/icons-sprite.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
           <li class="auth-nav item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link" aria-label="mobile">
+              <svg class="icon-contacts" width="16" height="12">
+                <use
+                  class="svg"
+                  href="./images/icons-sprite.svg#icon-mobile"
+                ></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -67,10 +78,15 @@
       <section class="section features">
         <div class="container">
           <!-- Заголовок -->
-          <h2 class="features title">Наши преимущества</h2>
+          <h2 class="features title visually-hidden">Наши преимущества</h2>
 
           <ul class="features list">
             <li class="item">
+              <div class="svg-container">
+                <svg with="70" height="70">
+                  <use href="./images/icons-sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="subtitle">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -78,6 +94,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="svg-container">
+                <svg with="70" height="70">
+                  <use href="./images/icons-sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="subtitle">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -85,12 +106,22 @@
               </p>
             </li>
             <li class="item">
+              <div class="svg-container">
+                <svg with="70" height="70">
+                  <use href="./images/icons-sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">ПЛАНУВАННЯ</h3>
               <p class="subtitle">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="item">
+              <div class="svg-container">
+                <svg with="70" height="70">
+                  <use href="./images/icons-sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="subtitle">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -139,7 +170,7 @@
         <div class="container">
           <h2 class="team title">Наша команда</h2>
           <ul class="team list">
-            <li class="item">
+            <li class="team-item">
               <img
                 class="page"
                 src="./images/team1.jpg"
@@ -150,10 +181,48 @@
               <div class="description">
                 <h3 class="title">Ігор Дем'яненко</h3>
                 <p class="subtitle">Product Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="instagram">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="twitter">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="facebook">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="linkedin">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
-            <li class="item">
+            <li class="team-item">
               <img
                 src="./images/team2.jpg"
                 alt="участник команды 2"
@@ -163,9 +232,47 @@
               <div class="description">
                 <h3 class="title">Ольга Рєпіна</h3>
                 <p class="subtitle">Frontend Developer</p>
+                <ul class="icon-list">
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="instagram">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="twitter">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="facebook">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="linkedin">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team-item">
               <img
                 src="./images/team3.jpg"
                 alt="участник команды 3"
@@ -175,9 +282,47 @@
               <div class="description">
                 <h3 class="title">Микола Тарасов</h3>
                 <p class="subtitle">Marketing</p>
+                <ul class="icon-list">
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="instagram">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="twitter">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="facebook">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="linkedin">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team-item">
               <img
                 src="./images/team4.jpg"
                 alt="участник команды 4"
@@ -187,44 +332,168 @@
               <div class="description">
                 <h3 class="title">Михайло Єрмаков</h3>
                 <p class="subtitle">UI Designer</p>
+                <ul class="icon-list">
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="instagram">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="twitter">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="facebook">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a href="#" class="social-link" aria-label="linkedin">
+                      <svg class="social-svg" width="20" height="20">
+                        <use
+                          href="./images/icons-sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
+    <!-- Секция 5 -->
+    <section class="section clients">
+      <div class="container">
+        <h2 class="client title">Постійні клієнти</h2>
+        <ul class="clients-list">
+          <li class="clients-item">
+            <a href="#" class="clients-link">
+              <svg class="clients-svg" width="106" height="60">
+                <use href="./images/icons-sprite.svg#icon-Logo"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="clients-link">
+              <svg class="clients-svg" width="106" height="60">
+                <use href="./images/icons-sprite.svg#icon-Logo2"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="clients-link">
+              <svg class="clients-svg" width="106" height="60">
+                <use href="./images/icons-sprite.svg#icon-Logo3"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="clients-link">
+              <svg class="clients-svg" width="106" height="60">
+                <use href="./images/icons-sprite.svg#icon-Logo4"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="clients-link">
+              <svg class="clients-svg" width="106" height="60">
+                <use href="./images/icons-sprite.svg#icon-Logo5"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="clients-link">
+              <svg class="clients-svg" width="106" height="60">
+                <use href="./images/icons-sprite.svg#icon-Logo6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
 
     <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <div class="logo-footer">
-          <a href="./index.html" class="logo"
-            ><span class="logo-title">Web</span
-            ><span class="accent">Studio</span>
-          </a>
+      <div class="container footer-flex">
+        <div>
+          <div class="logo-footer">
+            <a href="./index.html" class="logo"
+              ><span class="logo-title">Web</span
+              ><span class="accent">Studio</span>
+            </a>
+          </div>
+
+          <address class="address">
+            <ul class="address list">
+              <li class="item">
+                <a
+                  href="https://www.google.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-address"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                ><br />
+              </li>
+              <li class="item">
+                <a href="malito:info@devstudio.com" class="link"
+                  >info@devstudio.com</a
+                ><br />
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
         </div>
 
-        <address class="address">
-          <ul class="address list">
-            <li class="item">
-              <a
-                href="https://www.google.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="link-address"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              ><br />
+        <div class="social-footer">
+          <h3 class="title-footer">приєднуйтесь</h3>
+          <ul class="icon-list-footer">
+            <li class="icon-items">
+              <a href="#" class="social-link-footer" aria-label="instagram">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./images/icons-sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="malito:info@devstudio.com" class="link"
-                >info@devstudio.com</a
-              ><br />
+            <li class="icon-items-footer">
+              <a href="#" class="social-link-footer" aria-label="twitter">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./images/icons-sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <li class="icon-items-footer">
+              <a href="#" class="social-link-footer" aria-label="facebook">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./images/icons-sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-items-footer">
+              <a href="#" class="social-link-footer" aria-label="linkedin">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./images/icons-sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
