--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
 
           <ul class="site-nav list">
             <li class="site-nav item">
-              <a href="./index.html" class="link">Студія</a>
+              <a href="./index.html" class="link current">Студія</a>
             </li>
             <li class="site-nav item">
-              <a href="./portfolio.html" class="link current">Портфоліо</a>
+              <a href="./portfolio.html" class="link">Портфоліо</a>
             </li>
             <li class="site-nav item"><a href="" class="link">Контакти</a></li>
           </ul>
@@ -35,12 +35,23 @@
 
         <ul class="auth-nav list">
           <li class="auth-nav item">
-            <a href="malito:info@devstudio.com" class="link"
-              >info@devstudio.com
+            <a href="malito:info@devstudio.com" class="link" aria-label="mail">
+              <svg class="icon-contacts" width="16" height="12">
+                <use href="./images/icons-sprite.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
           <li class="auth-nav item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link" aria-label="mobile">
+              <svg class="icon-contacts" width="16" height="12">
+                <use
+                  class="svg"
+                  href="./images/icons-sprite.svg#icon-mobile"
+                ></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -68,6 +79,8 @@
             </li>
           </ul>
         </div>
+
+        <!-- Cards -->
 
         <div class="container">
           <ul class="list-pages cards-set">
@@ -212,35 +225,71 @@
 
     <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <div class="logo-footer">
-          <a href="./index.html" class="logo"
-            ><span class="logo-title">Web</span
-            ><span class="accent">Studio</span>
-          </a>
+      <div class="container footer-flex">
+        <div>
+          <div class="logo-footer">
+            <a href="./index.html" class="logo"
+              ><span class="logo-title">Web</span
+              ><span class="accent">Studio</span>
+            </a>
+          </div>
+
+          <address class="address">
+            <ul class="address list">
+              <li class="item">
+                <a
+                  href="https://www.google.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-address"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                ><br />
+              </li>
+              <li class="item">
+                <a href="malito:info@devstudio.com" class="link"
+                  >info@devstudio.com</a
+                ><br />
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
         </div>
 
-        <address class="address">
-          <ul class="address list">
-            <li class="item">
-              <a
-                href="https://www.google.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="link-address"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              ><br />
+        <div class="social-footer">
+          <h3 class="title-footer">приєднуйтесь</h3>
+          <ul class="icon-list-footer">
+            <li class="icon-items">
+              <a href="#" class="social-link-footer" aria-label="instagram">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./images/icons-sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="malito:info@devstudio.com" class="link"
-                >info@devstudio.com</a
-              ><br />
+            <li class="icon-items-footer">
+              <a href="#" class="social-link-footer" aria-label="twitter">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./images/icons-sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <li class="icon-items-footer">
+              <a href="#" class="social-link-footer" aria-label="facebook">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./images/icons-sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-items-footer">
+              <a href="#" class="social-link-footer" aria-label="linkedin">
+                <svg class="social-svg" width="20" height="20">
+                  <use href="./images/icons-sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
