--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,7 @@
     </header>
     <main>
       <section class="section">
+        <h1 class="visually-hidden">Портфоліо</h1>
         <!-- Button -->
 
         <div class="container">
